--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
         </head>
 
         <body>
-            <h1 class="center">Install kaito app on your iPhone</h1>
+            <h1 class="center">Install KaitoYaps app on your iPhone</h1>
             <div class="vertical">
-                <img src="build/2025_05_16_16_26_09/qrcode.jpg" alt="scan it with iphone camera">
-                
+                <img src="build/2025_06_16_14_46_59/qrcode.jpg" alt="scan it with iphone camera">
+                2025-06-16 14:46:59
             </div>
-            <hr />
-            For ShangHai team, visit <a href="http://10.18.27.35:8080/" />10.18.27.35</a>
         </body>
     </html>
     
