--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 <img src="build/2025_06_16_15_27_43/qrcode.jpg" alt="scan it with iphone camera">
                 2025-06-16 15:27:43
             </div>
+            <div class="vertical">
+                <img src="build/2025_06_19_11_36_13/qrcode.jpg" alt="scan it with iphone camera">
+                2025-06-19 11:36:13
+            </div>
         </body>
     </html>
     
